<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/init_user_info_parent_layout"
        android:background="@drawable/splash_bg_gradiant"
        tools:context="com.shohanz.mywater.StartUserActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="216dp"
            android:layout_height="208dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logovaso" />

    <Button
            android:id="@+id/btnContinue"
            style="@android:style/Widget.Material.Button"
            android:layout_width="168dp"
            android:layout_height="68dp"
            android:layout_marginBottom="34dp"
            android:background="#ffffff"
            android:text="@string/str_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:hint="@string/weight_hint"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etWorkTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etWeight">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:hint="@string/workout_hint"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etWakeUpTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="#fff"
                app:layout_constraintEnd_toStartOf="@+id/etSleepTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/wakeup_hint"
                    android:inputType="numberSigned"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etSleepTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etWakeUpTime"
                app:layout_constraintTop_toBottomOf="@+id/etWorkTime">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/sleeping_hint"
                    android:inputType="numberSigned"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>